architecturalrecord.com (archived on 2013-12-21)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "business;education",
  "char_count": 4992,
  "classifier_probability": 0.83,
  "cross_domain_homepage_redir": true,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.15,
  "homepage_snapshot_redirected_domain": "construction.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130906154731id_/http://archrecord.construction.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130907053929id_/http%3A//architecturalrecord.com",
  "interval": "2013_B",
  "link_text": "privacy and cookie notice",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "construction.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131221051206id_/http%3A//construction.com/privacy-notice.asp",
  "policy_title": "McGraw Hill Construction Privacy and Cookie Notice",
  "policy_url": "construction.com/privacy-notice.asp",
  "sha1": "e738a2fedfd5543fdff7041b28bad5266abfd1fc",
  "simhash": 8749633967990911494,
  "simhash_updated": true,
  "site_hostname": "architecturalrecord.com",
  "site_url": "http://architecturalrecord.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20131221051206",
  "word_count": 782,
  "year": 2013
}

--- a/a/ar/arc/architecturalrecord.com.html
+++ b/a/ar/arc/architecturalrecord.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the architecturalrecord.com privacy policy that was archived on 2013-06-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130617025114id_/http%3A//construction.com/privacy-notice.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the architecturalrecord.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221051206id_/http%3A//construction.com/privacy-notice.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>McGraw Hill Construction Privacy and Cookie Notice</title>
 <meta name="keywords" content="Construction, architect, engineer, contractor, constructor, AEC, EPC, Network for products, network, McGraw Hill Construction Network, subcontractor, general contractor, construction technology, information technology, building products, buildings, F.W. Dodge, fwdodge, Sweet's, Sweets, Architectural Record, design build, ENR, Engineering News-Record, construction careers, commercial buildings, building product manufacturers, McGraw-Hill, construction equipment, collaboration, project website, project web site, power, transportation, environment, construction cost index, building owners, construction collaboration, building forecast">
@@ -127,7 +127,7 @@
 </style>
 <link type="text/css" href="/css/style_cms.css" rel="stylesheet">
 <link type="text/css" href="/css/tinymce.css" rel="stylesheet">
-<script src="https://dnn506yrbagrg.cloudfront.net/pages/scripts/0013/0839.js?439002" async="" type="text/javascript"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/js/jquery-1.3.2.min.js"></script>
+<script src="https://dnn506yrbagrg.cloudfront.net/pages/scripts/0013/0839.js?439002" async="" type="text/javascript"></script><script type="text/javascript" async="" src="//img.en25.com/i/elqCfg.min.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/js/jquery-1.3.2.min.js"></script>
 <script type="text/javascript" src="/js/master_cms.js"></script>
 
  
@@ -172,6 +172,12 @@ End of old code -->
 	<!--OAS CALL -->
 <script language="JavaScript" type="text/javascript" src="http://construction.com/_MHC_shared_assests/js/oas.js"></script>
 
+<!--Cookie for Dodge Here -->
+
+</head><body><img src="http://oascentral.construction.com/RealMedia/ads/adstream.cap?1234567&amp;c=CMIC&amp;dv=1&amp;date=113013" height="1px" width="1px" alt="">
+
+<!--END: Cookie for Dodge Here -->
+
 
 <!--Google Analytics here -->
 <script type="text/javascript">
@@ -188,7 +194,7 @@ End of old code -->
   })();
 
 </script>
-<!--END: Google Analytics here --> </head><body><div class="leaderBoardContainer"><script language="JavaScript">OAS_AD('Top2');</script></div><div id="container"><div id="wrapper"><div id="element1"><div class="iw_component" id="c1324222487417"> <div class="header">
+<!--END: Google Analytics here --> <div class="leaderBoardContainer"><script language="JavaScript">OAS_AD('Top2');</script></div><div id="container"><div id="wrapper"><div id="element1"><div class="iw_component" id="c1324222487417"> <div class="header">
 	 <a href="/"><img src="/images_cms/logos/Logo.jpg" alt="McGraw Hill Construction" class="logo"></a>
 	  
 	  <div class="signHomeContainer">
@@ -207,26 +213,41 @@ End of old code -->
 -->
 	  </div>   
 
+<!--cookie for Dodge" -->
+<img src="" http:="" oascentral.construction.com="" realmedia="" ads="" adstream.cap?%%1234567&c="CMIC&amp;dv=1&amp;date=091513&quot;" height="1px" width="1px" alt="">
+
 	<div class="searchBg">
 
-	<form method="get" action="http://search.atomz.com/search/" name="f_searchForm">
+	<!--<form  method="get" action="http://search.atomz.com/search/" name="f_searchForm">-->
+	<form action="/Search/SearchResult.asp" method="get" name="Customer" target="_top" id="Customer">
+	<a onclick="JavaScript:return document.forms.Customer.submit();" href="#">
+			<img alt="Search McGraw Hill Construction" src="/images_cms/include-images/SearchIconRed.png">
+		</a>
+	<input name="searchTerm" type="text" id="txtSearchTerm" value="Search McGraw Hill Construction" onfocus="this.value=''; this.style.color = '#000';" onblur="this.value = this.value || this.defaultValue; this.style.color = '#000';" style="color: rgb(0, 0, 0);" class="ac_input" onkeypress="if (event.keyCode == 13) {this.form.submit();}" autocomplete="off"> 
+	
+	<!--<input name="searchTerm" type="text" id="txtSearchTerm" placeholder="Enter your search... &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp   " autofocus="autofocus" style="font-size: 13px; font-weight: normal; width: 178px; color: #333333;" onkeypress="if (event.keyCode == 13) {this.form.submit();}" class="yui-ac-input" autocomplete="off">-->
+	
+	<input type="hidden" value="" id="domainId" name="domainName">
+	<input type="hidden" value="Relevance" id="sort" name="sortOrder">
+
+	<!--
 		<a onclick="JavaScript:return document.forms.f_searchForm.submit();" href="#">
 			<img alt="Search McGraw Hill Construction" src="/images_cms/include-images/SearchIconRed.png">
 		</a>
 		<input type="text" value="Search McGraw Hill Construction" onfocus="this.value=''; this.style.color = '#000';" onblur="this.value = this.value || this.defaultValue; this.style.color = '#000';" style="color: rgb(0, 0, 0);" name="sp-q" class="ac_input">  	
 
-		<input type="hidden" value="sp100250b7" name="sp-a">
-		<input type="hidden" value="any" name="sp-p">
-		<input type="hidden" value="ISO-8859-1" name="sp-f">
-		<input type="hidden" value="" name="sp-k">
-		<input type="hidden" value="construction" name="section">
-		<input type="hidden" value="Construction_new" name="sp-t">
+		<input type="hidden" value="sp100250b7" name="sp-a"/>
+		<input type="hidden" value="any" name="sp-p"/>
+		<input type="hidden" value="ISO-8859-1" name="sp-f"/>
+		<input type="hidden" value="" name="sp-k"/>
+		<input type="hidden" value="construction" name="section"/>
+		<input type="hidden" value="Construction_new" name="sp-t"/>
 		
-		<input type="hidden" name="p2" value="ISO-8859-1">
-		<input type="hidden" name="pid2" value="1.7">
-		<input type="hidden" name="collection" value="">
-		<input type="hidden" name="srch" value="keyword">
-		<input type="hidden" name="keyword" value=" ">
+		<input type="hidden" name="p2" value="ISO-8859-1" />
+		<input type="hidden" name="pid2" value="1.7" />
+		<input type="hidden" name="collection" value="" />
+		<input type="hidden" name="srch" value="keyword" />
+		<input type="hidden" name="keyword" value=" " />-->
 	</form>
 	</div>
 
@@ -351,14 +372,14 @@ if (var_FirstDirName.match('asp')){
 						<li><a href="/about-us/press/">Press Room</a></li>
 						<li><a href="/about-us/contact-us.asp">Contact Us</a></li>
 						<li><a href="/about-us/awards.asp">Awards</a></li>
-						<li><a href="/about-us/about-mcgraw-hill.asp">About McGraw Hill</a></li>
+						<li><a href="/about-us/about-mcgraw-hill.asp">About McGraw Hill Financial</a></li>
 						<li><a href="/about-us/social.asp">Get Social</a></li>
 					</ul>
 				</div>
 				</li>
 		</ul>
 	</div>
-</div> </div><div class="iw_component" id="c1324222487421"><div class="callToaction"><p><span style="color: #000000;">Put Dodge to work for you.</span> <strong><span style="color: #e41937;">Call 877.903.1907</span></strong> <span style="color: #000000;">or</span> <a href="http://programs.construction.com/forms/moreinfo" target="_blank">click here</a><strong></strong></p></div></div><div id="element2"><div class="iw_component" id="c1324222487419"><div class="leftLinks"><div class="leftNav_blue"><h1>About Us</h1></div><ul><li><a href="/about-us/" target="_self">About McGraw Hill Construction</a></li><li><a href="/about-us/executive-profiles.asp" target="_self">Executive Profiles</a></li><li><a href="/about-us/press/" target="_self">Press Room</a></li><li><a href="/about-us/contact-us.asp" target="_self">Contact</a></li><li><a href="/about-us/awards.asp" target="_self">Awards</a></li><li><a href="/about-us/about-mcgraw-hill.asp" target="_self">About McGraw Hill Financial</a></li></ul></div></div><div class="iw_component" id="c1324222487416"><div><div class="copyContent"><span><div class="bucket">
+</div> </div><div class="iw_component" id="c1324222487421"><div class="callToaction"><p><span style="color: #000000;">Dodge helps contractors find construction projects.</span> <strong><span style="color: #e41937;">Call 877.903.1907</span></strong> <span style="color: #000000;">or</span> <a href="http://programs.construction.com/forms/moreinfo" target="_blank">click here</a><strong></strong></p></div></div><div id="element2"><div class="iw_component" id="c1324222487419"><div class="leftLinks"><div class="leftNav_blue"><h1>About Us</h1></div><ul><li><a href="/about-us/" target="_self">About McGraw Hill Construction</a></li><li><a href="/about-us/executive-profiles.asp" target="_self">Executive Profiles</a></li><li><a href="/about-us/press/" target="_self">Press Room</a></li><li><a href="/about-us/contact-us.asp" target="_self">Contact</a></li><li><a href="/about-us/awards.asp" target="_self">Awards</a></li><li><a href="/about-us/about-mcgraw-hill.asp" target="_self">About McGraw Hill Financial</a></li></ul></div></div><div class="iw_component" id="c1324222487416"><div><div class="copyContent"><span><div class="bucket">
 <div class="blueHeading">McGraw Hill Construction<br>Privacy and Cookie Notice</div>
 </div>
 <p style="BACKGROUND: white"><strong><span style="FONT-SIZE: 9pt; FONT-FAMILY: 'Arial','sans-serif'">WHAT PERSONALLY IDENTIFIABLE INFORMATION (“PII”) DOES MCGRAW HILL CONSTRUCTION COLLECT ABOUT YOU? </span></strong></p>
@@ -385,7 +406,7 @@ if (var_FirstDirName.match('asp')){
 </ul>
 <p>&nbsp;</p>
 <p><strong>IF YOU WANT TO LIMIT USE OR SHARING OF YOUR PII FOR MARKETING PURPOSES:</strong></p>
-<p><a href="http://construction.com/Privacy_opt-out/">Click here</a> or send an email to Construction.Privacy.Policy@mhfi.com or write <strong>Amy Sidelinger, </strong>Security Manager, McGraw Hill Construction, 148 Princeton-Hightstown Rd, Hightstown, NJ 08520 with the following instructions:</p>
+<p><a href="http://construction.com/Privacy_opt-out/">Click here</a> or send an email to Construction.Privacy.Policy@mhfi.com or write <strong>Amy Sidelinger,&nbsp;</strong>Privacy Official<strong> </strong>McGraw Hill Construction, 148 Princeton-Hightstown Rd, Hightstown, NJ 08520 with the following instructions:</p>
 <p>______I do not want to be contacted by McGraw Hill Construction through any method for marketing purposes.</p>
 <p>______I do not want my information shared with companies outside of McGraw Hill Financial.</p>
 <p>We have established safeguards and use reasonable security measures to protect your PII from unauthorized access and use. Your PII is stored in secured locations in the U.S. and Canada and access is limited to authorized persons.</p>
@@ -403,16 +424,17 @@ if (var_FirstDirName.match('asp')){
 <p>&nbsp;</p>
 <p>&nbsp;“Performance” or “Analytics” cookies, which help us to collect information about how visitors use our site, and helps us with site analysis and improvements.&nbsp; Performance or analytics cookies will remain on your computer after you close your browser, but cannot be used to identify you personally.</p>
 <p>“Functionality” cookies, which allow our site to remember your choices or preferences, such as information on online forms or previous orders. These cookies allow us to offer you a personalized experience while using the site. They are not used to track your browsing activity on other Web sites.</p>
-<p class="MsoNormal">In addition, some of our advertisers may set cookies allowing them to collect information about your online visits.&nbsp; They do this in order to present relevant ads about goods and services that may be of interest to you.&nbsp; We cannot control their use of cookies and do not have access to any cookies they may set.&nbsp; For more information about the practices of these third-party advertisers, including information on how to make choices about their use of cookies, please visit <a href="http://www.aboutads.info/">AboutAds.Info</a>.</p>
+<p class="MsoNormal">In addition, some of our advertisers may set cookies allowing them to collect information about your online visits.&nbsp; They do this in order to present relevant ads about goods and services that may be of interest to you.&nbsp; We cannot control their use of cookies and do not have access to any cookies they may set.&nbsp;</p>
 <p class="MsoNormal">You can change your Web browser’s Internet preferences to disable or delete cookies, although that may affect certain functions on this site. To learn how to manage your cookies, please follow the instructions from your specific browser, or follow the links below:</p>
 <p class="MsoNormal"><a href="http://support.microsoft.com/kb/196955">Internet Explorer</a></p>
 <p class="MsoNormal"><a href="http://support.mozilla.org/en-US/kb/enable-and-disable-cookies-website-preferences?redirectlocale=en-US&amp;redirectslug=Enabling+and+disabling+cookies">Firefox</a></p>
 <p class="MsoNormal"><a href="http://support.google.com/chrome/bin/answer.py?hl=en&amp;answer=95647">Chrome</a></p>
 <p class="MsoNormal"><a href="http://support.apple.com/kb/PH5042">Safari</a></p>
 <p class="MsoNormal"><a href="http://www.opera.com/browser/tutorials/security/privacy/">Opera</a></p>
+<p class="MsoNormal">Until “Do Not Track” protocol has been finalized, this site’s information collection and disclosure practices, and the choices it provides to consumers will continue to operate as described in this Privacy and Cookie Notice, whether or not a Do Not Track signal is received.</p>
 <p class="MsoNormal">If you are visiting this site using a mobile device such as a smart phone or tablet, please refer to the manufacturer’s instructions on how to manage cookies.</p>
 <p><a href="http://www.mhfi.com/privacy" target="_blank">Click here</a> for more information about the McGraw Hill&nbsp;Financial Customer Privacy Policy.</p>
-<p><strong>Last updated: June 14, 2013.</strong> Future revisions to this Privacy and Cookie Notice will be posted at this location.</p>
+<p><strong>Last updated: <strong>November 25, 2013</strong>.</strong> Future revisions to this Privacy and Cookie Notice will be posted at this location.</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -618,9 +640,40 @@ if (var_FirstDirName.match('asp')){
 </ul>
 <div class="copyright">© <script type="text/javascript">var theDate=new Date();document.write(theDate.getFullYear())</script>2020 McGraw Hill Financial. All Rights Reserved</div>
 </div>
+<!-- Start Click to Chat Integration -->
+<div id="lf_div_invite" name="lf_div_invite" style="display:none;position:absolute;left:0px;top:0px;width:0px;height:0px;">
+<iframe name="lf_iframe_invite" id="lf_iframe_invite" frameborder="0" src="about:blank" style="width:100%;height:100%;border:none;" allowtransparency="true" scrolling="no"></iframe></div>
+<!-- Begin Velaro Weblink Code -->
+<script type="text/javascript" src="http://v.velaro.com/lf/cookies.js"></script>
+<script type="text/javascript">
+var _params = {};
+_params.siteid = 11462; // Velaro Site ID
+_params.deptid = ''; // Velaro Department ID leave blank if none
+_params.secure = false;
+_params.extra = ''; // Custom data, escape all inputs
+(function(){
+var mon = document.createElement("script"); mon.type = "text/javascript"; mon.async = true;
+var mu = (('https:' == document.location.protocol || _params.secure) ? 'https://' : 'http://') + 'v.velaro.com/lf/monitor2.aspx?siteid=' + escape(_params.siteid);
+mu += ((_params.deptid != '') ? '&deptid=' + escape(_params.deptid) : '') + ((('https:' == document.location.protocol) || (_params.secure)) ? '&secure=yes' : '&secure=no');
+mu += '&qs=' + escape(window.location.search) + '&tz=' + escape(new Date().getTimezoneOffset()) + '&co=' + escape(navigator.cookieEnabled);
+mu += '&sw=' + escape(screen.width + 'x' + screen.height) + '&pal=' + escape(screen.colorDepth) + '&pl=' + escape(navigator.platform);
+mu += '&an=' + escape(navigator.appName) + '&la=' + (navigator.appName == 'Netscape'?  escape(navigator.language) : escape(navigator.systemLanguage));
+mu += '&je=' + escape(navigator.javaEnabled()) + '&origin=' + escape(window.document.URL.replace(/&/g,"*"));
+mu += '&ck=' + velaro_GetCookie('velarovisitor_' + _params.siteid).replace(/&/g, "*");
+mu += _params.extra;
+mon.src = mu;
+var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(mon, s);
+})();
+</script>
+<!-- End Velaro Weblink Code -->
+<!-- End Click to Chat Integration -->
 <!-- WEBTRENDS START -->  
-<script type="text/javascript" src="/js/dcs_head.js"></script>
-<script type="text/javascript" src="/js/dcs_tag.js"></script>
+<script type="text/javascript">
+    if (typeof useCustomWebtrends === 'undefined' || !useCustomWebtrends) {
+        document.write('<scr' + 'ipt type="text/javascript" src="/js/dcs_head.js"></scr' + 'ipt>');
+        document.write('<scr' + 'ipt type="text/javascript" src="/js/dcs_tag.js"></scr' + 'ipt>');
+    }
+</script><script type="text/javascript" src="/js/dcs_head.js"></script><script type="text/javascript" src="/js/dcs_tag.js"></script>
 <!-- WEBTRENDS END -->  
 
 <!-- BIZO Tracking Start -->
@@ -633,10 +686,24 @@ _bizo_data_partner_id = 103
 </script>
 <!-- BIZO Tracking End -->
 
-<!-- ELOQUA START -->  
-<script type="text/javascript" language="JavaScript" src="/elqNow/elqCfg.js"></script> 
-<script type="text/javascript" language="JavaScript" src="/elqNow/elqImg.js"></script><layer hidden="true"><img src="https://secure.eloqua.com/visitor/v200/svrGP.aspx?pps=3&amp;siteid=866&amp;ref2=elqNone&amp;tzo=0&amp;ms=686" border="0" width="1" height="1"></layer>
-<!-- ELOQUA END --> 
+<!--BEGIN: Eloqua Code-->
+<script type="text/javascript">
+    var _elqQ = _elqQ || [];
+    _elqQ.push(['elqSetSiteId', '1123']);
+    _elqQ.push(['elqTrackPageView']);
+    
+    (function () {
+        function async_load() {
+            var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;
+            s.src = '//img.en25.com/i/elqCfg.min.js';
+            var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+        }
+        if (window.addEventListener) window.addEventListener('DOMContentLoaded', async_load, false);
+        else if (window.attachEvent) window.attachEvent('onload', async_load); 
+    })();
+</script>
+<!--END: Eloqua Code-->
+ 
 
 <!-- Revenue Science API --> 
 <script src="http://js.revsci.net/gateway/gw.js?csid=K08784"></script>  
