--- a/t/th/the/the-bikini.com.html
+++ b/t/th/the/the-bikini.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the the-bikini.com privacy policy that was archived on 2013-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130622134915id_/http%3A//www.the-bikini.com/information/%3Faction%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the the-bikini.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221051550id_/http%3A//www.the-bikini.com/information/%3Faction%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd"><html><head>
 <link rel="stylesheet" type="text/css" href="../!css/style.css">
@@ -133,7 +133,7 @@ function showccolors()
 
   <td align="center" valign="top" width="165">
 
-   <img src="/images/headerphoto5.jpg" width="155" height="122" title="the-Bikini.com Micro and Mini Bikini Shop - extreme Bikinis" alt="mini bikini micro bikinis">
+   <img src="/images/headerphoto1.jpg" width="155" height="122" title="the-Bikini.com Micro and Mini Bikini Shop - extreme Bikinis" alt="mini bikini micro bikinis">
 
   </td>
 
@@ -186,7 +186,7 @@ function showccolors()
 
 <span class="title-text"> &nbsp;&nbsp;
 
-<b>Extreme micro bikinis online shop since 2000</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;22/06/2013</span>
+<b>Extreme micro bikinis online shop since 2000</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;21/12/2013</span>
 
 
 
@@ -233,7 +233,8 @@ function showccolors()
   <li> <a href="/galleries-peekaboo-tear-drop" title="strings only bikinis - no coverage">PeekABoo Tear Drop</a></li>
   <li>  <a href="/galleries-sling-peekaboo" title="no coverage slingshot bikinis">PeekABoo Sling</a></li> 
  <li>  <a href="/galleries-zipper" title="only a zipper bikini bottom">Zipper Extreme</a></li> 
- <li><a href="/galleries-nostringbikini" title="bikinis without strings">No Strings</a> </li>
+ <li><a href="/galleries-nostringbikini" title="micro bikinis without strings">Micro No Strings</a> </li>
+ <li><a href="/galleries-mininostring" title="mini bikinis without strings">Mini No Strings</a> </li>
   <li><a href="/galleries-minimicro" title="mini micro bikinis">MiniMicro Bikinis</a> </li>
   <li><a href="/galleries-sheer" title="see thru transparent bikinis">Sheer Bikinis</a></li>
 				</ul>	</li>
@@ -278,8 +279,11 @@ function showccolors()
 	
 	<li class="dir"><a href="/galleries-brazilcrochet" title="View our handmade crochet bikinis">Handmade Crochet</a>
 		<ul>
+			<li><a href="/galleries-metalcoloredcrochet" title="Limited Edition metal crochet bikinis">Metalic Colored</a></li>
+			<li><a href="/galleries-fishnetcrochet" title="fishnet crochet bikinis">Fishnet</a></li>
 			<li><a href="/galleries-crochet" title="handmade crochet mini micro and thong bikinis">Micro, Mini, Thong </a></li>
 			<li><a href="/galleries-brazilcrochet" title="handmade crochet brazilian bikinis">Brazilian</a></li>
+			<li><a href="/galleries-crochetbandeautop" title="handmade crochet bandeau top bikini">Bandeau Top</a></li>
 		
 		</ul>
 	</li>
