stimul-cash.com (archived on 2013-12-21)
{
  "alexa_rank": 342087,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 5246,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.0,
  "homepage_snapshot_redirected_domain": "stimul-cash.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131110224717id_/https://stimul-cash.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131110224717id_/http%3A//stimul-cash.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "stimul-cash.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131221060548id_/https%3A//stimul-cash.com/privacy.html",
  "policy_title": "Stimul-Cash.com Affiliate Program",
  "policy_url": "stimul-cash.com/privacy.html",
  "sha1": "f362cf6dbb9eb60cc6a83900567bbd096dc941fb",
  "simhash": 18016947788775711971,
  "simhash_updated": false,
  "site_hostname": "stimul-cash.com",
  "site_url": "http://stimul-cash.com",
  "smog": 16.49,
  "strict_updated": false,
  "timestamp": "20131221060548",
  "word_count": 822,
  "year": 2013
}

--- a/s/st/sti/stimul-cash.com.html
+++ b/s/st/sti/stimul-cash.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the stimul-cash.com privacy policy that was archived on 2013-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130602030914id_/https%3A//stimul-cash.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the stimul-cash.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221060548id_/https%3A//stimul-cash.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -19,7 +19,7 @@
               <div class="menu_top">
       <a title="Home" href="."><img src="imgs/m_home.gif"></a>
       <a title="Blog" href="http://www.rxpblog.com/access-to-the-closed-section/"><img src="imgs/m_blog.gif"></a>
-      <a title="Our Sites" href="sites.html"><img src="imgs/m_sites.gif"></a>
+<!--      <a title="Our Sites" href="sites.html"><img src="imgs/m_sites.gif" /></a> -->
       <a title="Special Promotions" href="promo.html"><img src="imgs/m_promotions.gif"></a>
       <a title="Forum" href="http://sc-forum.com/"><img src="imgs/m_forum.gif"></a>
       <a title="Help" href="http://sc-forum.com/wiki/"><img src="imgs/m_help.gif"></a>
