--- a/h/ht/htm/html-color-codes.info.html
+++ b/h/ht/htm/html-color-codes.info.html
@@ -1,15 +1,15 @@
-<!--The following is the downloaded HTML source of the html-color-codes.info privacy policy that was archived on 2013-05-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130520043845id_/http%3A//html-color-codes.info/PrivacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the html-color-codes.info privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221060934id_/http%3A//html-color-codes.info/PrivacyPolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
-	<link rel="stylesheet" type="text/css" href="http://c632769.r69.cf2.rackcdn.com/hcc_014.css">
+	<link rel="stylesheet" type="text/css" href="http://c632769.r69.cf2.rackcdn.com/hcc_015.css">
 
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Html Color Codes Privacy Policy</title>
 	<meta name="description" content="Html Color Codes Privacy Policy">
 	<meta name="keywords" content="Html, Color, Codes, Privacy, Policy">
 	<link rel="shortcut icon" href="http://c632769.r69.cf2.rackcdn.com/favicon.ico" type="image/x-icon">
-	<script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
+	<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-814714-1']);
   _gaq.push(['_trackPageview']);
@@ -20,29 +20,6 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 var rndnum = Math.random();  
-</script>
-<script type="text/javascript">
-var googletag = googletag || {};
-googletag.cmd = googletag.cmd || [];
-(function() {
-var gads = document.createElement('script');
-gads.async = true;
-gads.type = 'text/javascript';
-var useSSL = 'https:' == document.location.protocol;
-gads.src = (useSSL ? 'https:' : 'http:') + 
-'//www.googletagservices.com/tag/js/gpt.js';
-var node = document.getElementsByTagName('script')[0];
-node.parentNode.insertBefore(gads, node);
-})();
-</script>
-<script type="text/javascript">
-googletag.cmd.push(function() {
-googletag.defineSlot('/15185363/BelowColorPicker', [728, 90], 'div-gpt-ad-1366526156744-0').addService(googletag.pubads());
-googletag.defineSlot('/15185363/ColorChart', [728, 90], 'div-gpt-ad-1366526156744-1').addService(googletag.pubads());
-googletag.defineSlot('/15185363/MiddleSidebarVert', [160, 600], 'div-gpt-ad-1366526156744-2').addService(googletag.pubads());
-googletag.pubads().enableSingleRequest();
-googletag.enableServices();
-});
 </script>
 </head>
 <body onload="setTimeout(fbtw(),100);">
@@ -68,23 +45,18 @@ googletag.enableServices();
 	<ul>
 		<li><a href="http://html-color-codes.info/#Html_Color_Chart" title="Color Chart">Color Chart</a></li>
 		<li><a href="http://html-color-codes.info/#HTML_Color_Picker" title="Color Picker">Color Picker</a></li>
-		<li><a href="http://html-color-codes.info/color-names" title="Color Names">Color Names</a></li>
-		<li><a href="http://html-color-codes.info/web-safe-colors" title="Web Safe Colors">Web Safe Colors</a></li>
-		<li><a href="http://html-color-codes.info/html-editor" title="Online HTML Editor">Online HTML Editor</a></li>
    </ul>
 </li>
-<li><a href="http://blog.html-color-codes.info/" title="Tutorials"><div class="menusprite" style="background-position: 0 -22px; width: 71px; height: 14px;"></div></a></li>
-<li><a href="#" title="The Best Of Free Software"><div class="menusprite" style="background-position: 0 -88px; width: 83px; height: 14px;"></div></a>
+<li><a href="http://html-color-codes.info/colors-from-image" title="Get Color Codes from Image"><div class="menusprite" style="margin-top:4px;background-position: 0 -19px; width: 153px; height: 14px;"></div></a></li>
+<li><a href="http://html-color-codes.info/color-names" title="Color Names"><div class="menusprite" style="background-position: 0 -44px; width: 103px; height: 14px;"></div></a></li>
+<li><a href="http://html-color-codes.info/web-safe-colors" title="Web Safe Colors"><div class="menusprite" style="background-position: 0 -66px; width: 127px; height: 14px;"></div></a></li>
+<li><a href="http://html-color-codes.info/html-editor" title="Online HTML Editor"><div class="menusprite" style="background-position: 0 -88px; width: 158px; height: 14px;"></div></a></li>
+<li><a href="#"><div class="menusprite" style="background-position: 0 -110px; width: 82px; height: 14px;"></div></a>
 <ul>
 		<li><a href="http://html-color-codes.info/the-best-free-software" title="The Best Free Software">Free Software</a></li>
 		<li><a href="http://html-color-codes.info/the-best-online-services" title="The Best Online Services">Online services</a></li>
    </ul>
 </li>
-<li><a href="/contact" title="Contact"><div class="menusprite" style="background-position: 0 -44px; width: 63px; height: 14px;"></div></a></li>
-<li><a href="/advertise" title="Advertise"><div class="menusprite" style="background-position: 0 -66px; width: 77px; height: 14px;"></div></a></li>
-
-<div class="search">
-</div>
 </ul></div>
 	<div id="main">
 		<h1>Privacy Policy</h1>
@@ -117,17 +89,17 @@ With respect to Ad Servers: To try and bring you offers that are of interest to 
 With respect to security: We have appropriate security measures in place in our physical facilities to protect against the loss, misuse or alteration of information that we have collected from you at our site.
 
 <br>
-		<!-- ColorChart -->
-</p><div id="div-gpt-ad-1366526156744-1" style="width:728px; height:90px;">
-<script type="text/javascript">
-googletag.cmd.push(function() { googletag.display('div-gpt-ad-1366526156744-1'); });
-</script>
-</div>
 		<br>
-<br>
 
-<p></p>
+<br><br>
 
+</p>
+<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- BelowColorChart -->
+<ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-6483924506584584" data-ad-slot="3874231427"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>		
 
 		<br><br>
 
@@ -144,22 +116,12 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1366526156744-1');
 </div>
 	</div>
 	<div id="sidebar">
-		<div id="subsb" style="height:1000px; width=300px; text-align:right; margin-right:5px;">
-<iframe id="fb" src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FHTML-Color-Codesinfo%2F21393237730&amp;width=260&amp;colorscheme=light&amp;show_faces=true&amp;stream=false&amp;header=false&amp;height=340" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:240px; height:340px;" allowtransparency="true"></iframe>
-</div>
-<!-- MiddleSidebarVert -->
-<div id="div-gpt-ad-1366526156744-2" style="width:160px; height:600px;">
-<script type="text/javascript">
-googletag.cmd.push(function() { googletag.display('div-gpt-ad-1366526156744-2'); });
+		<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- SidebarHCCwide -->
+<ins class="adsbygoogle" style="display:inline-block;width:160px;height:600px" data-ad-client="ca-pub-6483924506584584" data-ad-slot="2070827025"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-</div>
-
-<img src="http://c632769.r69.cf2.rackcdn.com/ythcc.jpg" width="0" height="0">
-<img src="http://c632769.r69.cf2.rackcdn.com/picker_thumb.png" width="0" height="0">
-<img src="http://c632769.r69.cf2.rackcdn.com/hue_thumb.png" width="0" height="0">
-<img src="http://c632769.r69.cf2.rackcdn.com/onoff_001.png" width="0" height="0">
-<img src="http://c632769.r69.cf2.rackcdn.com/hue_bg.png" width="0" height="0">
-<img src="http://c632769.r69.cf2.rackcdn.com/picker_mask_001.png" width="0" height="0">
 	</div>	
 	<div id="footer">
 		<div class="footsection">
