--- a/c/cu/cuc/cucusoft.com.html
+++ b/c/cu/cuc/cucusoft.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cucusoft.com privacy policy that was archived on 2013-03-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130316031624id_/http%3A//www.cucusoft.com/PrivacyPolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cucusoft.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221063845id_/http%3A//www.cucusoft.com/PrivacyPolicy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en" xml:lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -17,7 +17,7 @@
 <center>
 <div id="PageFrame">
   <!--Begin of PageTop -->
-  <div id="PageTop">
+    <div id="PageTop">
     <!-- PageTop_TopLine -->
     <div id="PageTop_TopLine">
       <div id="google_translate_element">
@@ -31,20 +31,21 @@ function googleTranslateElementInit() {
     </div>
     <!-- PageTop_Banner -->
     <div id="PageTop_Banner">
-      <div id="PageTop_Banner_Logo"><a href="./"><img alt="Cucusoft Logo" border="0" src="http://www.cucusoft.com/images/NormalHead/bannalogo.png" width="166" height="60"></a></div>
-      <div id="PageTop_Banner_Banner"><img alt="Top Banner" border="0" src="http://www.cucusoft.com/images/NormalHead/topbanna.png" width="801" height="60"></div>
+      <div id="PageTop_Banner_Logo"><a href="./"><img alt="Cucusoft Logo" border="0" src="http://www.cucusoft.com/images/ChristmasBanner/bannalogo2009.png"></a></div>
+      <div id="PageTop_Banner_Banner"><img alt="Top Banner" border="0" src="http://www.cucusoft.com/images/ChristmasBanner/banna2009.png"></div>
+	<div class="PageTop_Banner_Desc">Cucusoft, Inc. the best shareware and freeware provider!</div>      
     </div>
     <!-- PageTop_Menu -->
     <div id="PageTop_Menu">
       <ul class="MenuNav">
-        <li><a href="http://www.cucusoft.com">Home</a></li>
-        <li><a href="http://www.cucusoft.com/download.aspx">Products</a></li>
-        <li><a href="http://www.cucusoft.com/Buynow.aspx">Purchase</a></li>
-        <li><a href="http://www.cucusoft.com/Guides.asp">Guides</a></li>
-        <li><a href="http://www.cucusoft.com/FAQs.asp">FAQs</a></li>
-        <li><a href="http://www.cucusoft.com/Contact.asp">Contact</a></li>
-        <li><a href="http://www.cucusoft.com/about_cucusoft.asp">About</a></li>
-        <li><a href="http://www.cucusoft.com/affiliates.aspx">Affiliates</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/download.aspx">Products</a></li>
+        <li><a href="/Buynow.aspx">Purchase</a></li>
+        <li><a href="/Guides.asp">Guides</a></li>
+        <li><a href="/FAQs.asp">FAQs</a></li>
+        <li><a href="/Contact.asp">Contact</a></li>
+        <li><a href="/about_cucusoft.asp">About</a></li>
+        <li><a href="/affiliates.aspx">Affiliates</a></li>
         <li><a href="http://support.cucusoft.com">User Login</a></li>
       </ul>
     </div>
@@ -335,7 +336,7 @@ function googleTranslateElementInit() {
               <table class="DefaultText" cellpadding="2" width="100%" border="0" bgcolor="#FFFFFF">
   <tbody><tr>
     <td width="100%" height="49" align="center" valign="bottom">
-      Copyright © 2002-2013 Cucusoft, Inc. All rights reserved. | <a class="DefaultLink" href="PrivacyPolicy.asp">Privacy Policy</a> | <a class="DefaultLink" href="TermsOfUse.asp">Terms of Use</a> | <a class="DefaultLink" href="sitemap.aspx">Sitemap</a> <br>
+      Copyright © 2002-2014 Cucusoft, Inc. All rights reserved. | <a class="DefaultLink" href="PrivacyPolicy.asp">Privacy Policy</a> | <a class="DefaultLink" href="TermsOfUse.asp">Terms of Use</a> | <a class="DefaultLink" href="sitemap.aspx">Sitemap</a> <br>
       <span class="Trademarks">
         iTunes, iPod, iPhone and iPad are registered trademarks of Apple® Inc.<br>
         Zune is registered trademarks of Microsoft® Corporation.<br>
